# tickets_api

./: README.md
.github/workflows/: docker-publish.yml
tickets_api/: Cargo.toml  Dockerfile  docker-compose.yaml
tickets_api/.cargo/: config.toml
tickets_api/sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql  02-dev-seed.sql
tickets_api/src/: ctx.rs  main.rs  server.rs
tickets_api/src/_dev_utils/: dev_db.rs  key.rs  mod.rs  seed.rs
tickets_api/src/base/: db.rs  mod.rs
tickets_api/src/config/: mod.rs
tickets_api/src/controller/: login.rs  mod.rs  ticket.rs  tickets.rs
tickets_api/src/crypt/: error.rs  mod.rs  pwd.rs  token.rs
tickets_api/src/error/: mod.rs
tickets_api/src/log/: mod.rs
tickets_api/src/middleware/: auth.rs  response.rs
tickets_api/src/model/: error.rs  login.rs  mod.rs  task.rs  ticket.rs  user.rs
tickets_api/src/model/store/: error.rs  mod.rs
tickets_api/src/observability/: mod.rs
tickets_api/src/router/: login.rs  mod.rs  tickets.rs
tickets_api/src/rpc/: mod.rs
tickets_api/src/rpc/model/: mod.rs
tickets_api/src/rpc/router/: mod.rs
tickets_api/src/rpc/task/: mod.rs
tickets_api/src/service/: mod.rs  task.rs  user.rs
tickets_api/src/util/: base64.rs  mod.rs  time.rs
