[package]
name = "tickets_api"
version = "0.1.0"
edition = "2021"

# cargo watch -q -c -w src/ -w .cargo/ -x "run"
# cargo watch -q -c -w examples/ -x "run --example simple"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7.4"
async-trait = "0.1"
# -- WEB -- #
tower-http = { version = "0.5", features = ["fs"] }
tower-cookies = "0.10"
# -- Serde -- #
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# -- Tracing -- #
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# -- Others
strum_macros = "0.26"
uuid = { version = "1", features = ["v4", "fast-rng"] }
lazy-regex = "3"

[dev-dependencies]
anyhow = "1"
